# Shmem-Wrapper

./: .gitignore  README.md
client/: CMakeLists.txt
client/include/: shmem_client.hpp
client/source/: shmem_client.cpp
common/api/: shmem_defines.hpp
common/include/: shmem_allocator.hpp  shmem_data.hpp  shmem_mutex.hpp
common/source/: shmem_allocator.cpp  shmem_data.cpp  shmem_mutex.cpp
core/interface/: broker.hpp  error.hpp
core/shmem/include/: shmem.h
core/shmem/source/: shmem.c
server/include/: shmem_server.hpp
server/source/: shmem_server.cpp
